Add seeds + update to koa2

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     ]
   },
   "scripts": {
-    "webserver": "node server/server.js",
+    "webserver": "node start.js",
     "build": "node_modules/.bin/webpack",
     "dev": "node_modules/.bin/webpack-dev-server",
     "start": "npm run dev",
@@ -44,6 +44,7 @@
   "dependencies": {
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -54,7 +55,7 @@
     "html-webpack-plugin": "^2.24.0",
     "immutable": "^3.8.1",
     "knex": "^0.12.6",
-    "koa": "^1.2.4",
+    "koa": "^2.0.0",
     "koa-cors": "0.0.16",
     "koa-route": "^2.4.2",
     "node-sass": "^3.10.1",
