--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "knex": "^0.12.6",
     "koa": "^2.0.0",
     "koa-cors": "0.0.16",
-    "koa-route": "^2.4.2",
+    "koa-router": "^7.0.1",
     "node-sass": "^3.10.1",
     "pg": "^6.1.0",
     "react": "^15.3.2",
